# evolved-desire-llms-claude

./: .resource_finder_complete  README.md  REPORT.md  RESEARCH_COMPLETE.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: evolutionary_prompt_optimization_large_language_models_20260323_195422.jsonl
papers/: README.md
papers/pages/: 2309.08532_evoprompt_manifest.txt  2309.16797_promptbreeder_manifest.txt  2406.00799_task_drift_activations_manifest.txt  (+2 more)
results/: all_prompts.json  evolution_20251222_004833.json  evolution_checkpoint.json  evolution_result.json  experiment_20251222_004833.json  experiment_log.txt  experiment_v2_20251222_011233.json  prompt_analysis.txt  statistical_analysis.txt  test_results.json  train_results.json
src/: __init__.py  analyze.py  config.py  counter_task.py  counter_task_hard.py  create_visualizations.py  evaluator.py  evolution.py  llm_client.py  run_experiment.py  run_experiment_v2.py  scenarios.py  visualize.py
